--- a/ProjetIntegre/src/Vue/FenetrePrincipaleAdmin.fxml
+++ b/ProjetIntegre/src/Vue/FenetrePrincipaleAdmin.fxml
@@ -12,7 +12,7 @@
    <children>
       <SplitPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="610.0">
          <items>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="660.0" prefWidth="608.0" style="-fx-background-color: #333645;">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="714.0" prefWidth="634.0" style="-fx-background-color: #333645;">
                <children>
                   <Button layoutX="557.0" mnemonicParsing="false" onAction="#deconnecter" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: red;" textFill="WHITE">
                      <graphic>
@@ -22,7 +22,7 @@
                            </image>
                         </ImageView>
                      </graphic></Button>
-                  <Button layoutX="309.0" layoutY="94.0" mnemonicParsing="false" onAction="#gestionSalle" prefHeight="130.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Salle" textFill="WHITE">
+                  <Button layoutX="309.0" layoutY="63.0" mnemonicParsing="false" onAction="#gestionSalle" prefHeight="112.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Salle" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -33,9 +33,9 @@
                      <font>
                         <Font size="16.0" />
                      </font></Button>
-                  <Button layoutX="309.0" layoutY="235.0" mnemonicParsing="false" onAction="#gestionSeance" prefHeight="130.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Seance" textFill="WHITE">
+                  <Button layoutX="309.0" layoutY="200.0" mnemonicParsing="false" onAction="#gestionSeance" prefHeight="46.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Seance" textFill="WHITE">
                      <graphic>
-                        <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="90.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../Images/seance%20.PNG" />
                            </image>
@@ -44,7 +44,7 @@
                      <font>
                         <Font size="15.0" />
                      </font></Button>
-                  <Button layoutX="52.0" layoutY="235.0" mnemonicParsing="false" onAction="#gestionMatiere" prefHeight="130.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Matiere" textFill="WHITE">
+                  <Button layoutX="52.0" layoutY="200.0" mnemonicParsing="false" onAction="#gestionMatiere" prefHeight="77.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Matiere" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -56,7 +56,7 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button layoutX="52.0" layoutY="94.0" mnemonicParsing="false" onAction="#gestionClasse" prefHeight="130.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Classe" textFill="WHITE">
+                  <Button layoutX="52.0" layoutY="63.0" mnemonicParsing="false" onAction="#gestionClasse" prefHeight="55.0" prefWidth="242.0" style="-fx-background-color: #00A2D3;" text="Gestion Classe" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -73,19 +73,12 @@
                         <Font size="30.0" />
                      </font>
                   </Label>
-                  <Button layoutX="52.0" layoutY="377.0" mnemonicParsing="false" onAction="#gestionEtudiant" prefHeight="130.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Etudiant" textFill="WHITE">
-                     <graphic>
-                        <ImageView fitHeight="79.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="file:/C:/Users/Asus/Downloads/student.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button layoutX="52.0" layoutY="328.0" mnemonicParsing="false" onAction="#gestionEtudiant" prefHeight="90.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Etudiant" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button layoutX="309.0" layoutY="377.0" mnemonicParsing="false" onAction="#gestionProf" prefHeight="130.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Prof" textFill="WHITE">
+                  <Button layoutX="309.0" layoutY="328.0" mnemonicParsing="false" onAction="#gestionProf" prefHeight="90.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Gestion Prof" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -97,7 +90,7 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button layoutX="52.0" layoutY="523.0" mnemonicParsing="false" onAction="#gestionEvent" prefHeight="130.0" prefWidth="489.0" style="-fx-background-color: #00A2D3;" text="Gestion Evenement" textFill="WHITE">
+                  <Button layoutX="49.0" layoutY="436.0" mnemonicParsing="false" onAction="#gestionEvent" prefHeight="90.0" prefWidth="490.0" style="-fx-background-color: #00A2D3;" text="Gestion Evenement" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -107,6 +100,16 @@
                      </graphic>
                      <font>
                         <Font size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnTransport" layoutX="52.0" layoutY="572.0" mnemonicParsing="false" onMouseClicked="#goToTransport" prefHeight="73.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Transport Scolaire" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnForum" layoutX="309.0" layoutY="571.0" mnemonicParsing="false" onMouseClicked="#goToForum" prefHeight="74.0" prefWidth="230.0" style="-fx-background-color: #00A2D3;" text="Forum" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
                      </font>
                   </Button>
                </children>
